--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        GITHUB_TOKEN: your_token_here
-        REPO_URL: github.com/yourusername/yourrepo.git
+        GITHUB_TOKEN: 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
+        REPO_URL: https://github.com/JakeScottSalt/dockertest.git
     environment:
       - NODE_ENV=production
     networks:
